css corrections (overflow)

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,6 @@ body {
 }
 
 .meme-body {
-  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
