--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,9 +1,9 @@
 .header {
+  width: 100%;
   display: flex;
   align-items: center;
   background-color: blueviolet;
   height: 10vh;
-  width: 100vw;
   font-family: "Bungee", cursive;
 }
 
