--- a/src/css/image.scss
+++ b/src/css/image.scss
@@ -1,6 +1,6 @@
 .meme {
+  width: 90vw;
   position: relative;
-  width: 95vw;
   text-align: center;
   margin: 0 auto;
 }
@@ -8,7 +8,7 @@
 .meme-img {
   width: 100%;
   min-height: 300px;
-  max-width: 800px;
+  max-width: 500px;
   background-size: contain;
 }
 
